--- a/05_DOM/04.html
+++ b/05_DOM/04.html
@@ -7,7 +7,7 @@
     <title>Chai aur code | DOM</title>
 </head>
 <body style="background-color: #212121; color: #fff;">
-    <ul class="language">
+    <ul class="language">6
         <li>Javascript</li>
     </ul>
 </body>
