--- a/05_DOM/01.html
+++ b/05_DOM/01.html
@@ -21,7 +21,7 @@
         <input type="password" name="" id="">
 
         <ul>
-            <li class="list-item">one</li>30
+            <li class="list-item">one</li>
             <li class="list-item">two</li>
             <li class="list-item">three</li>
             <li class="list-item">four</li>
